Fixes email address visibility problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -704,6 +704,7 @@ nav#filter {
 
 .contactInfoText {
     color: #000;
+    width: 208px;
     font-size: 16px;
     border-radius: 8px;
     border-width: 1px;
